@@ -34,6 +34,8 @@ hockeypuck (1.0~a1) precise; urgency=low
     - Add SKS peering to main hockeypuck server process.
     - Fix peer configuration options.
     - Update packaging version.
+  * peer/peer.go:
+    - Updated wrt recent changes in the conflux/recon Config struct.
 
   [ Evan Broder ]
   * Makefile, mgo/client.go, mgo/worker.go:
